fix margin collapsing issue

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,4 +5,5 @@ html, body {
 
 header {
     background-color: lightgoldenrodyellow;
+    padding: 0.5rem;
 }
